@@ -3,6 +3,7 @@ strongswan (5.3.5-2) UNRELEASED; urgency=medium
   * debian/rules:
     - migrate debug package to ddeb.
     - enable systemd and swanctl.                               closes: #813788
+    - enable aesni plugin on i386 and amd64.
   * debian/control:
     - drop strongswan-dbg package.
     - add strongswan-swanctl and charon-systemd packages.
